--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
-<!DOCTYPE html><html lang="ru"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.png"><link rel="preload" href="fonts/Helvetica-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="fonts/YesevaOne-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link href="/css/about.074daccc.css" rel="prefetch"><link href="/js/about.670e9bf8.js" rel="prefetch"><link href="/css/app.b5e1f24c.css" rel="preload" as="style"><link href="/js/app.2f40c3ff.js" rel="preload" as="script"><link href="/js/chunk-vendors.0317546f.js" rel="preload" as="script"><link href="/css/app.b5e1f24c.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but affinage-test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><script src="https://yastatic.net/share2/share.js"></script><div id="app"></div><script src="/js/chunk-vendors.0317546f.js"></script><script src="/js/app.2f40c3ff.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width initial-scale=1.0">
+  <title>Title</title>
+  <link rel="preload" href="fonts/Montserrat-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.min.css">
+</head>
+<body>
+<header class="header">
+  <div class="wrapper">
+    <div class="header__top-row">
+      <a href="#" class="header__logo-link">
+        <svg class="header__logo-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 78 78" fill="#fff">
+          <path d="M63 28.9h-8.8L27.8 53.8H10V36.5l24.2-22.7L18 14 0 30.7v33.5h34l29-27.6v-7.7z"></path>
+          <path d="M44 13.8L15 41.4v7.7h8.8l26.4-24.9H68v17.3L43.8 64.2 60 64l18-16.8V13.8H44z"></path>
+        </svg>
+      </a>
+      <nav class="header__desk-nav">
+        <ul class="header__menu">
+          <li class="header__item"><a href="#" class="header__menu-link">Main</a></li>
+          <li class="header__item"><a href="#" class="header__menu-link">Gallery</a></li>
+          <li class="header__item"><a href="#" class="header__menu-link">News</a></li>
+          <li class="header__item"><a href="#" class="header__menu-link">Profile</a></li>
+        </ul>
+      </nav>
+      <div class="header__phone">
+        <a href="tel:+544349000000" class="header__phone-link">
+          <span class="header__tel">+544 3490 00000</span>
+          <svg class="header__icon-tel" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 302 302">
+            <path fill="#666" d="M301 151a150 150 0 11-300 0 150 150 0 11300 0z"></path>
+            <path fill="#fff" d="M193.8 246.8a135 135 0 0020.9-8c2-1.3 2.4-1.7 1.6-2.4a1444 1444 0 00-42.5-37.3c-.3.1-.9 2.4-1.4 5.1-1 5.3-1.9 6.5-5 6.5-2.5 0-4.1-1.4-6.6-5.6-1-1.9-2.7-4.5-3.8-5.8-1-1.3-3-4.6-4.6-7.3-1.5-2.7-4.2-7.2-6-10-3.9-6.2-8.5-14-10.3-17.1a69 69 0 00-4-6.2 59 59 0 01-4.3-6.7c-.9-1.6-3.3-5.5-5.4-8.6a113 113 0 01-5.5-9.2c-1-2-2.8-5-4-7-2.9-4.4-6.1-11-6.7-13.3-.3-1.4 0-2.1 1.4-3.5 2-1.9 2.1-1.9 8.4 0 2 .7 4 1 4.1.9.3-.3-14-55.8-14.5-56.3a158 158 0 00-17.2 14.4c0 .3-1.4 2-3.2 3.8-1.8 1.7-4.3 4.9-5.6 7-2 3.2-2.5 4.6-3.1 10.3a146 146 0 0011.7 65.9c4.9 11.4 7.8 17.1 11.3 22a155.2 155.2 0 0039 47.5c8.2 6.3 25.6 17.7 29.6 19.3 11.8 4.8 14.9 5 25.7 1.6zm30-20.4c2.6-6.3 2.6-6.7 1.5-7.7-1-1-30.8-27-35-30.4-.9-.9-1.9-.6-7.9 2.4-5.7 3-6.6 3.6-5.9 4.4a2501 2501 0 0044.4 38l2.9-6.7zm-91.8-120c2.8-2 5.1-3.9 5.1-4L125 55c-.4-.4-14.7-2.4-15-2-.1 0 3.8 15.2 14.5 55.9.8 2.9.3 3 7.5-2.4z"></path>
+          </svg>
+        </a>
+        <span class="header__call-on">Звони скорее!</span>
+      </div>
+      <button class="header__sandwich js-menu-toggle" type="button">
+        <svg width="24" height="16" viewBox="0 0 24 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect width="24" height="2" rx="1" fill="#F5F5F5"></rect>
+          <rect y="7" width="24" height="2" rx="1" fill="#F5F5F5"></rect>
+          <rect y="14" width="24" height="2" rx="1" fill="#F5F5F5"></rect>
+        </svg>
+      </button>
+    </div>
+    <div class="header__bottom-row">
+      Найдено 349 котов
+    </div>
+    <nav class="header__mob-nav js-accordion">
+      <ul class="header__menu">
+        <li class="header__item"><a href="#" class="header__menu-link">Main</a></li>
+        <li class="header__item"><a href="#" class="header__menu-link">Gallery</a></li>
+        <li class="header__item"><a href="#" class="header__menu-link">News</a></li>
+        <li class="header__item"><a href="#" class="header__menu-link">Profile</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+<main>
+  <section id="gallery" class="gallery wrapper">
+    <h2 class="visually-hidden">Милые, забавные, пушистые котики</h2>
+    <div class="gallery__header">
+      <span class="gallery__legend">Сортировать по:</span>
+      <button type="button" class="gallery__filter" :class="{'gallery__filter--asc': filteredBy === 'price' && isSortedAsc}" @click="sortBy('price')">
+        Цене
+      </button>
+      <button type="button" class="gallery__filter" :class="{'gallery__filter--asc': filteredBy === 'age' && isSortedAsc}" @click="sortBy('age')">Возрасту</button>
+    </div>
+    <div class="gallery__showroom">
+      <article class="card" v-for="(card, idx) in cards" :key="card.id" v-if="idx < number">
+        <div class="card__notice" :class="{'card__notice--show': card.fav && idx === currentId}">
+          Добавленно в избранное
+        </div>
+        <div class="card__notice" :class="{'card__notice--show': !card.fav && idx === currentId}">
+          Удалено из избранного
+        </div>
+        <div class="card__discount" v-if="card.discount">{{card.discount}}</div>
+        <div class="card__favorite" @click="toggleFavorite(idx)" draggable="false">
+          <svg xmlns="http://www.w3.org/2000/svg" width="46" height="42" class="card__heart" :class="{'card__heart--check': card.fav}">
+            <path d="M33.8.7C31.3.7 29 1.5 27 3c-2 1.5-3.2 3.4-4 4.8-.8-1.4-2-3.3-4-4.8S14.7.7 12.2.7C5.2.7 0 6.4 0 13.9c0 8.2 6.6 13.8 16.5 22.3l5.6 4.7a1.4 1.4 0 001.8 0l5.6-4.8C39.5 27.7 46 22.1 46 14 46 6.4 40.7.7 33.8.7z"></path>
+          </svg>
+        </div>
+        <div class="card__img-wrapper">
+          <img :src="card.img.x1" class="card__img" width="380" height="264" alt="" :srcset="card.img.x2 + ' 2x'" draggable="false">
+        </div>
+        <h2 class="card__heading">{{card.title}}</h2>
+        <ul class="card__properties">
+          <li class="card__property">
+            {{card.color}}
+            <div class="card__title-property">окрас</div>
+          </li>
+          <li class="card__property card__property--text-bold">
+            {{card.age}} мес.
+            <div class="card__title-property">Возраст</div>
+          </li>
+          <li class="card__property card__property--text-bold">
+            {{card.paws}}
+            <div class="card__title-property">кол-во лап</div>
+          </li>
+        </ul>
+        <div class="card__price">
+          {{(card.price.toString()).replace(/\B(?=(\d{3})+(?!\d))/g, " ")}} руб.
+        </div>
+        <button type="button" class="card__buy" :class="{'card__buy--sold': !card.count}">
+          {{card.count ? `Купить` : `Продан`}}
+        </button>
+      </article>
+    </div>
+    <button type="button" class="gallery__show-more">Показать ещё 20</button>
+  </section>
+  <div class="scroll-up scroll-up--hidden wrapper js-ie-sticky">
+    <div class="scroll-up__button js-scroll-top">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" fill="none">
+        <path fill="#fff" d="M8.3 1l-8 8a1 1 0 00-.3.7c0 .3.1.5.3.7l.6.6c.4.4 1 .4 1.4 0L9 4.3l6.7 6.7c.2.2.5.3.7.3.3 0 .5-.1.7-.3l.6-.6c.2-.2.3-.4.3-.7a1 1 0 00-.3-.7l-8-8A1 1 0 009 .7a1 1 0 00-.7.3z"></path>
+      </svg>
+    </div>
+  </div>
+  <div class="wrapper">
+    <footer class="footer">
+      <div class="footer__left">
+        <div class="footer__cry">Успей купить!</div>
+        <div class="footer__motto">Подпишись и успей словить все акции</div>
+      </div>
+      <form class="footer__form form" name="subscription">
+        <label class="form__label">
+          <input type="email" name="email" class="form__input" placeholder="Email">
+          <span class="form__notice">Введите e-mail без ошибок</span>
+        </label>
+        <button class="form__submit js-submit-btn" type="submit">Подписаться</button>
+        <div>
+          <input type="checkbox" name="news" value="true" class="visually-hidden" id="subscribe">
+          <label for="subscribe" class="form__checkbox">
+            <svg class="form__mark" xmlns="http://www.w3.org/2000/svg" width="10" height="8" fill="none">
+              <path fill="#fff" d="M4.53 7.39c-.46.45-1.2.45-1.65 0L.34 4.84A1.16 1.16 0 011.98 3.2L3.5 4.72c.11.11.3.11.41 0l4.1-4.1a1.16 1.16 0 011.65 1.63L4.53 7.4z"></path>
+            </svg>
+          </label>
+          <span class="form__subscribe">Подписаться на новости</span>
+        </div>
+      </form>
+    </footer>
+  </div>
+</main>
+
+<script src="js/app.bundle.js"></script>
+</body>
+</html>
